--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   <title>HTML Images</title>
 </head>
 <body>
-
+  
+  <figure>
+    <img src="yellow-ANIMATION.gif" alt="Visiting Card" style="width:100%">
+    <figcaption style="font-family: monospace; font-size: 16pt; color: darkgray;">K24 Visiting Card</figcaption>
+  </figure>
+  <br>
+  <figure>
+    <img src="green-ANIMATION.gif" alt="Product Range" style="width:100%">
+    <figcaption style="font-family: monospace; font-size: 16pt; color: darkgray;">K24 Product Range</figcaption>
+  </figure>
   <!-- Your code here -->
 
 </body>
